refactor: 피드 커서 조회 및 테스트 보강